test/e2e/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: test-hp
  namespace: test
spec:
  virtualhost:
    fqdn: test-proxy.mantle.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: my-nginx
          port: 8080
