test/e2e/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: test
  labels:
    run: my-nginx
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: my-nginx
